# data_station

./: .gitignore  .gitmodules  AGENTS.md  README.md  dbc2msg.py  requirements.txt  setup.md
LART Car Dashboard v1/: LART_car_dashboard_v1.eez-project  LART_car_dashboard_v1.eez-project-ui-state  speed.py  teste.eez-project
LART Car Dashboard v1/src/ui/: .eez-project-build  fonts.h  screens.c  screens.h  styles.c  ui.c  ui_font_orbiter_bold_100.c  ui_font_orbitron_bold_50.c
LART_Car_Dashboard_v1/: .dockerignore  00_START_HERE.md  CHEATSHEET.md  DOCKER_QUICKSTART.md  Dockerfile  Dockerfile.fixed.txt  GUIDE.md  LART_car_dashboard_v1.eez-project  LART_car_dashboard_v1.eez-project-runtime-settings  LART_car_dashboard_v1.eez-project-ui-state  Makefile  README_DOCKER.md  SETUP_SUMMARY.md  autostart_dashboard.sh  demo.sh  docker-compose.yml  guide.md  mqtt_demo.sh  speed.py  test_data.sh
LART_Car_Dashboard_v1/.docker-build-output/: index.js
LART_Car_Dashboard_v1/src/ui/: .eez-project-build  CMakeLists.txt  comandos.md  docker-compose.yml  eez-flow.cpp  fonts.h  images.c  images.h  lv_conf.h  mqttsubscriber.cpp  mqttsubscriber.h  package.xml  power_api.cpp  ros2subscriber.cpp  ros2subscriber.h  screen_api.cpp  screens.c  screens.h  speed_api.cpp  structs.h  styles.c  styles.h  ui.c  ui.h  ui_font_orbiter_bold_100.c  ui_font_orbitron_15.c  ui_font_orbitron_bold_15.c  ui_font_orbitron_bold_20.c  ui_font_orbitron_bold_25.c  ui_font_orbitron_bold_30.c  ui_font_orbitron_bold_40.c  ui_runner.cpp  vars.h
LART_Car_Dashboard_v1/src/ui/fonts/: ui_font_orbiter_bold_100.c  ui_font_orbitron_15.c  ui_font_orbitron_bold_15.c  ui_font_orbitron_bold_20.c  ui_font_orbitron_bold_25.c  ui_font_orbitron_bold_30.c  ui_font_orbitron_bold_40.c  ui_font_orbitron_bold_50.c
dbc_signals/: aquisition_boards.dbc  autonomous_t26.dbc  data_t26.dbc  powertrain_t26.dbc
src/dashboard_ui/: package.xml  setup.cfg  setup.py
src/dashboard_ui/dashboard_ui/: speed_listener.py  ui_app.py  ui_node.py
src/input_handler/: package.xml  setup.cfg  setup.py
src/input_handler/input_handler/: input_node.py
src/lart_bringup/: package.xml  setup.cfg  setup.py
src/lart_bringup/config/: rpi_config.yaml
src/lart_bringup/lart_bringup/: can_bridge.py  dashboard_state_bridge.py
src/lart_bringup/launch/: car.launch.py  dbc_sim.launch.py  sim.launch.py
src/lart_msgs/: CMakeLists.txt  package.xml
src/lart_msgs/msg/: ButtonEvent.msg  CanFrame.msg  DashboardState.msg  EncoderDelta.msg
src/led_controller/: package.xml  setup.py
src/led_controller/led_controller/: led_node.py
src/sim/: package.xml  setup.py
src/sim/sim/: can_simulator.py  mock_can.py
