<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd"
            schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>led_controller</name>
  <version>0.1.0</version>
  <description>Addressable LED strip controller for RPM gauge</description>
  <maintainer email="lart@example.com">LART</maintainer>
  <license>MIT</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <!-- adafruit-circuitpython-neopixel + adafruit-blinka installed via pip -->

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
