<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd"
            schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>sim</name>
  <version>0.1.0</version>
  <description>Mock CAN publisher for home/bench testing without hardware</description>
  <maintainer email="lart@example.com">LART</maintainer>
  <license>MIT</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>lart_msgs</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
