<?xml version="1.0"?>
<package format="3">
  <name>speed_subscriber</name>
  <version>0.0.1</version>
  <description>Vehicle speed MQTT subscriber</description>
  <maintainer email="you@email.com">you</maintainer>
  <license>Apache-2.0</license>

  <build_depend>libmosquitto-dev</build_depend>
  <exec_depend>libmosquitto1</exec_depend>

  <buildtool_depend>ament_cmake</buildtool_depend>
</package>