<?xml version="1.0"?>
<package format="3">
  <name>speed_subscriber</name>
  <version>0.0.0</version>
  <description>ROS2 subscriber library used by the dashboard UI</description>
  <maintainer email="devnull@example.com">Dev</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>lart_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
</package>
